# myproject

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: main.py
src/myproject/: api.py  cli.py  config.py  idempotency.py  logging_config.py  main.py  webhook.py
tests/: test_main.py  test_webhook.py
