[project]
name = "myproject"
version = "0.1.0"
description = "Reusable Python project template"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
myproject = "myproject.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
